--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,22 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@icons/*": ["app/assets/icons/*"],
+      "@images/*": ["app/assets/images/*"],
+      "@component": ["app/components"],
+      "@component/*": ["app/components/*"],
+      "@config": ["app/config"],
+      "@config/*": ["app/config/*"],
+      "@screen/*": ["app/screens/*"],
+      "@navigation": ["app/navigation"],
+      "@navigation/*": ["app/navigation/*"],
+      "@theme": ["app/themes"],
+      "@theme/*": ["app/themes/*"],
+      "@utils/*": ["app/utils/*"],
+      "@/*": ["app/*"]
+    }
+  }
 }
